# t0yv0.github.io

./: .dir-locals.el  .emacs  .gitignore  .travis.yml  20241102-git-spice.html  20241102-git-spice.org  20241103-torn-slices.html  20241103-torn-slices.org  Main.hs  Makefile  about.html  about.md  about.org  archive.html  atom.xml  build.ps1  clean.ps1  content.css  content.scrbl  deploy.sh  ha4.cabal  index.html  index.org  site.hs  src-index.html  style.css  t0yv0.cabal  windows.html  windows.org
2015/02/websharper-101/: WebSharper101.pptx  outline.org
2015/02/websharper-101/Boids/: Boids.sln
2015/02/websharper-101/Boids/Boids/: Boids.fsproj  BoidsModel.fs  Client.fs  Main.fs  Shapes.fs  Utility.fs  Vectors2D.fs  Web.config
2024/11/: 20241102-git-spice.html  20241102-git-spice.org  20241103-torn-slices.html  20241103-torn-slices.org
2025/07/: 20250711-llm.html  20250711-llm.org
2025/10/: 20251010-pledge.html  20251010-pledge.org  20251031-evals.html  20251031-evals.org
2025/11/: 20251122-llm-tutors.html  20251122-llm-tutors.org
2026/03/: 20260307-jupyterling.html  20260307-jupyterling.org  20260307-soul-new-machine.html  20260307-soul-new-machine.org
art/: art.html
css/: default.css
drafts/: links.md
posts/: 2012-12-07-tu-quoque.markdown  2015-05-17-hello-hakyll.html  2015-05-17-hello-hakyll.md
scripts/: new.el  rebuild.el
src-css/: default.css
templates/: default.html  post-list.html  post.html
